--- a/src/index.html
+++ b/src/index.html
@@ -2,10 +2,14 @@
 <html>
 
 <head>
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <link rel="stylesheet" href="./style.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
-    <script src="./main.js"></script>
+    <link rel="stylesheet" href="./CSS/style.css">
+
+    <script src="https://code.jquery.com/jquery-1.12.4.min.js" integrity="sha384-nvAa0+6Qg9clwYCGGPpDQLVpLNn0fRaROjHqs13t4Ggj3Ez50XnGQqc/r8MhnRDZ" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-color/2.1.2/jquery.color.min.js" integrity="sha384-Dmia8eQq5QAVU5VL95mpXzGE2n2oYxIv9aFwn+JAtQ3Y/4bWeHSjKUgYSJi/BovQ" crossorigin="anonymous"></script>
+    <script type="text/javascript" src="./JS/libs/color_mixer.js"></script>
+    <script type="text/javascript" src="./JS/app.js"></script>
 </head>
 
 <body>
@@ -14,7 +18,7 @@
             <text class="title">What color is your name?</text>
             <input type="text" id="strInput" placeholder="What's your name?">
             <div id="colorHexStr">#FFFFFF</div>
-            <text class="footer">loris x <a href="https://noelkampus.ch">noelkampus.</a></text>
+            <text class="footer"><a href="https://github.com/slowloris-coding">slowloris-coding</a> &#10005; <a href="https://noelkampus.ch">noelkampus.</a></text>
             <text class="footer-version">v1.0</text>
         </div>
     </div>
