Refactored CSS and HTML (simplified)

--- a/src/index.html
+++ b/src/index.html
@@ -13,15 +13,30 @@
 </head>
 
 <body>
-    <div id="wrapper">
-        <div id="strColor">
-            <text class="title">What color is your name?</text>
-            <input type="text" id="strInput" placeholder="What's your name?">
-            <div id="colorHexStr">#FFFFFF</div>
-            <text class="footer"><a href="https://github.com/slowloris-coding">slowloris-coding</a> &#10005; <a href="https://noelkampus.ch">noelkampus.</a></text>
-            <text class="footer-version">v1.0</text>
-        </div>
-    </div>
+    <header>
+        <text>What color is your name?</text>
+    </header>
+    <main>
+        <input type="text" id="strInput" placeholder="What's your name?">
+        <div id="colorHexStr">#FFFFFF</div>
+    </main>
+    <footer>
+        <text id="developerCollabTagline">Developed by</text>
+        <text id="developerCollabText">
+            <a class="developerMention" id="slowloris_coding_mention" href="https://github.com/slowloris-coding">slowloris-coding</a>
+            &#10005;
+            <a class="developerMention" id="noelkampus_mention" href="https://noelkampus.ch">noelkampus</a>
+        </text>
+        <text id="appVersionText">v1.0</text>
+    </footer>
+
+    <!--
+    <text class="title">What color is your name?</text>
+    <input type="text" id="strInput" placeholder="What's your name?">
+    <div id="colorHexStr">#FFFFFF</div>
+    <text class="footer"><a href="https://github.com/slowloris-coding">slowloris-coding</a> &#10005; <a href="https://noelkampus.ch">noelkampus.</a></text>
+    <text class="footer-version">v1.0</text>
+    -->
 </body>
 
 </html>
