--- a/src/index.html
+++ b/src/index.html
@@ -22,11 +22,11 @@
     </main>
     <footer>
         <text id="developerCollabTagline">Developed by</text>
-        <div id="developerCollabText">
-            <text class="developerName"><a id="slowloris_coding_mention" href="https://github.com/slowloris-coding">slowloris-coding</a></text>
-            <text>&#10005;</text>
-            <text class="developerName"><a id="noelkampus_mention" href="https://noelkampus.ch">noelkampus</a></text>
-        </div>
+        <text id="developerCollabText">
+            <a class="developerName" id="slowloris_coding_mention" href="https://github.com/slowloris-coding">slowloris-coding</a>
+            &#10005;
+            <a class="developerName" id="noelkampus_mention" href="https://noelkampus.ch">noelkampus</a>
+        </text>
         <text id="appVersionText">v1.0</text>
     </footer>
 
