--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+    <link rel="icon" type="image/png" href="./media/favicon/paint-bucket.png" />
+
     <link rel="stylesheet" href="./CSS/style.css">
 
     <script src="https://code.jquery.com/jquery-1.12.4.min.js" integrity="sha384-nvAa0+6Qg9clwYCGGPpDQLVpLNn0fRaROjHqs13t4Ggj3Ez50XnGQqc/r8MhnRDZ" crossorigin="anonymous"></script>
@@ -14,7 +16,7 @@
 
 <body>
     <header>
-        <text>What color is your name?</text>
+        <!--<text>What color is your name?</text>-->
     </header>
     <main>
         <input type="text" id="strInput" placeholder="What's your name?">
