Added Easter-Egg Support

--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,7 @@
     <script src="https://code.jquery.com/jquery-1.12.4.min.js" integrity="sha384-nvAa0+6Qg9clwYCGGPpDQLVpLNn0fRaROjHqs13t4Ggj3Ez50XnGQqc/r8MhnRDZ" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-color/2.1.2/jquery.color.min.js" integrity="sha384-Dmia8eQq5QAVU5VL95mpXzGE2n2oYxIv9aFwn+JAtQ3Y/4bWeHSjKUgYSJi/BovQ" crossorigin="anonymous"></script>
     <script type="text/javascript" src="./JS/libs/color_mixer.js"></script>
+    <script type="text/javascript" src="./JS/libs/easter_eggs.js"></script>
     <script type="text/javascript" src="./JS/app.js"></script>
 </head>
 
@@ -31,14 +32,6 @@
         </text>
         <text id="appVersionText">v1.0</text>
     </footer>
-
-    <!--
-    <text class="title">What color is your name?</text>
-    <input type="text" id="strInput" placeholder="What's your name?">
-    <div id="colorHexStr">#FFFFFF</div>
-    <text class="footer"><a href="https://github.com/slowloris-coding">slowloris-coding</a> &#10005; <a href="https://noelkampus.ch">noelkampus.</a></text>
-    <text class="footer-version">v1.0</text>
-    -->
 </body>
 
 </html>
